--- a/css/menu-bar.css
+++ b/css/menu-bar.css
@@ -43,6 +43,34 @@ nav ul li a{
     text-transform: uppercase;
 }
 
+nav ul li ol {
+    display: none;
+    height: 100px;
+    list-style: none;
+    position: absolute;
+    background: #4D0000;
+}
+
+nav ul li:hover ol {
+    display: block;
+}
+
+nav ul li ol li {
+    color: #fff;
+    font-size: 18px;
+    padding: 2px;
+    border-radius: 3px;
+    text-transform: uppercase;
+}
+
+nav ul li ol li a {
+    width: 95%;
+    height: 25%;
+    text-transform: uppercase;
+    font-size: 18px;
+    
+}
+
 li a.active, li a:hover{
     background: #000090;
     transition: .5s;
