--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    width: 100%;
+    height: 100%;
+    letter-spacing: 0.03em;
+    line-height: 1.6;
+}
 h1{
     text-align: center;
 }
@@ -54,7 +60,8 @@ p,a{
     border: 5px solid #000000;
     height: 280px;
     overflow: hidden;
-    width: 100%;
+    width: 50%;
+    margin: 0 auto;
 }
 .itemcarrusel{
     border: 1px solid #000000;
@@ -78,22 +85,18 @@ p,a{
 }
 
 #tarjetaCarrusel-1{
-    background-color: aqua;
+    
 }
 
 #tarjetaCarrusel-2{
-    background-color: antiquewhite;
+    
 }
 
 #tarjetaCarrusel-3{
-    background-color: aquamarine;
+    
 }
 a{
     text-decoration: none;
-}
-#contenedorcarrusel{
-    display: flex;
-    justify-content: space-around;
 }
 
 .img-carrusel{
@@ -115,8 +118,88 @@ a{
     box-sizing:border-box;
 }
 
+.container{
+    width: 100%;
+    max-width: 1200px;
+    height: 500px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+}
+
+.container .card{
+    width: 330px;
+    height: 430px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px 50px;
+    text-align: center;
+    transition: all 0.25s;
+}
+
+.container .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.container .card .img-card{
+    width: 330px;
+    height: 220px;
+}
+
+.container .card h2{
+    font-weight: 600;
+}
+
+.container .card p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.Contenedor-enlaces{
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+}
+
+.Contenedor-enlaces .card-enlace{
+    width: 330px;
+    height: 430px;
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+}
+
+.img-enlace{
+    height: 307px;
+    width: 329px;
+    border-radius: 50%;
+}
+
+.txt-enlace{
+    align-items: center;
+}
+
+.ico-enlace{
+    width: 40px;
+    height: 40px;
+}
+
+.ico-rs{
+    width: 50px;
+    height: 50px;
+}
+
 footer{
-    background-color:#0934a8;
+    background-color:#4D0000;
     color:#fff;
     clear:both;
     padding:10px;
