--- a/css/Instrumentos.css
+++ b/css/Instrumentos.css
@@ -1,3 +1,53 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+/* Carrusel css */
+#conteItemsCarrusel{
+    height: 200px;
+    overflow: hidden;
+}
+
+.itemCarrusel{
+    height: 100%;
+    position: relative;
+}
+
+.tarjetCarrusel{
+    background-color: rgb(206, 238, 238);
+    height: 100%;
+    position: relative;
+}
+
+.flechasCarrusel{
+    background-color: transparent rgb(112, 112, 223, 0.5);
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    
+}
+
+#tarjetaCarrusel-1{
+    background: rgb(255, 255, 255);
+}
+#tarjetaCarrusel-2{
+    background: rgb(255, 255, 255);
+}
+#tarjetaCarrusel-3{
+    background: rgb(255, 255, 255);
+}
+
+a{
+    text-decoration: none;
+}
+/* Fin Carrusel Css */
 h1{
     font-size: 34px;
     text-align: center;
@@ -34,8 +84,9 @@ h4{
     display: flex;
 }
 .vid{
-    display: flex;
-    align-items: center;
+    display: inline;
+    align-self: center;
+    padding: 5px;
 }
 .de{
     color: rebeccapurple;
