--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,10 @@ a{
     justify-content: center;
 }
 
+.txt-enlace a{
+    font-weight: bold;
+}
+
 .ico-enlace{
     width: 40px;
     height: 40px;
