--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h2{
 }
 p,a{
     font-family: 'Lato', sans-serif;
+    font-size: 1em;
     text-align: justify;
 }
 
@@ -188,6 +189,7 @@ a{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 10px;
 }
 
 .txt-enlace a{
