--- a/css/Instrumentos.css
+++ b/css/Instrumentos.css
@@ -11,59 +11,55 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: #FFB333 ;
-}
-
-/* Carrusel css */
-#conteItemsCarrusel{
-    height: 200px;
-    overflow: hidden;
-}
-
-.itemCarrusel{
-    height: 100%;
-    position: relative;
-}
-
-.tarjetCarrusel{
-    background-color: rgb(206, 238, 238);
-    height: 100%;
-    position: relative;
-}
-
-.flechasCarrusel{
-    background-color: transparent rgb(112, 112, 223, 0.5);
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
+    background-color: #FFB333;
     
 }
+.cont{
+    width: auto;
+    height: auto;
+    margin: 12px;
+    padding: 6px;
+    box-sizing: border-box;
+}
+/*Izquierda div y derecha div css*/
+.post{
+    display: flex;
+    padding: 10%;
+    align-self: center;
+}
 
-#tarjetaCarrusel-1{
-    background: rgb(255, 255, 255);
-}
-#tarjetaCarrusel-2{
-    background: rgb(255, 255, 255);
-}
-#tarjetaCarrusel-3{
-    background: rgb(255, 255, 255);
+.pl{
+    position: relative;
+    width: 50%;
+    margin-right: 2%;
 }
 
-a{
-    text-decoration: none;
+.pr{
+    position: relative;
+    width: 50%;
+    margin-left: 2%;
 }
-/* Fin Carrusel Css */
+
+/*Fin de derecha e izquierda css*/
+
+/* Texto del Carrusel css*/
+.de{
+    color: darkgrey;
+    float: left;
+    font-size: 18px;
+}
+
+.iz{
+    color: royalblue;
+    float: right;
+    font-size: 18px;
+}
+/* Fin del texto de Carrusel css*/
+
+/* Texto css*/
 h1{
     font-size: 34px;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
-}
-h1{
     font-family: 'Roboto', sans-serif;
 }
 h3,h4,h5{
@@ -73,12 +69,6 @@ p,a{
     font-family: 'Lato', sans-serif;
 }
 
-.cont{
-    margin: 12px;
-    padding: 6px;
-    box-sizing: border-box;
-}
-
 h3{
     font-size: 25px;
 }
@@ -86,29 +76,95 @@ h3{
 h4{
     font-size: 21px;
 }
-
-.ima{
+/* Fin de Texto Css*/
+.resl{
     width: auto;
-    height: auto;
     align-items: center;
     display: flex;
 }
-.vid{
-    display: inline;
-    align-self: center;
-    padding: 5px;
+
+/* Key Frame*/
+@keyframes rotar{
+    from{transform: rotateY(0deg);}
+    to{transform: rotateY(360deg);}
 }
-.de{
-    color: rebeccapurple;
-    float: left;
+/*Fin Key Frame*/
+
+/* Boton e imagen Css*/
+.moved{
+    display: flex;
+    padding: 10%;
+    justify-content: space-around;
+}
+
+.resl-history{
+    border-radius: 50%;
+    width: auto;
+    animation-name: rotar;
+    animation-duration: 3s;
+    animation-iteration-count: 5;
+    margin-bottom: 55px;
+}
+.resl-contact{
+    border-radius: 50%;
+    width: auto;
+    animation-name: rotar;
+    animation-duration: 3s;
+    animation-iteration-count: 5;
+    margin-bottom: 55px;
+}
+/* Key frame*/
+@keyframes cambio{
+    from{
+        transform: scale(0.3);
+        background: #e4ba71bd;
+    }
+    to{
+        transform: scale(1);
+        background: #FFFFFF;
+    }
+}
+/* Fin Key frame*/
+.text-button{
+    padding: 15px;
+    border-radius: 15px;
+    width: 100%;
+    justify-items: center;
+    margin-left: 0.5%;
+    text-align: center;
+    pointer-events: all;
+    animation-name: cambio;
+    animation-iteration-count: 2;
+    animation-duration: 6s;
+}
+
+.text-button:hover{
+    background-color: #e4ba71bd;
+}
+
+.text-button a{
+    text-decoration: none;
+    color: #400000;
     font-size: 18px;
 }
 
-.iz{
-    color: rebeccapurple;
-    float: right;
-    font-size: 18px;
+.izq{
+    margin: 0 15px;
+    position: static;
+    width: auto;
 }
+.der{
+    width: auto;
+    position: static;
+    margin: 0 15px;
+}
+
+/* Video css*/
+.vid{
+    width: auto;
+    height: 94%;
+}
+/* Fin Video css*/
 
 /* Footer */
 .pie-pagina {
@@ -153,3 +209,4 @@ h4{
     margin: 0 10px;
     padding: 3px;
 }
+/*Fin Footer*/
