--- a/css/menu-bar.css
+++ b/css/menu-bar.css
@@ -41,6 +41,7 @@ nav ul li a{
     padding: 7px 13px;
     border-radius: 3px;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 nav ul li ol {
@@ -68,11 +69,11 @@ nav ul li ol li a {
     height: 25%;
     text-transform: uppercase;
     font-size: 18px;
-    
+    text-decoration: none;
 }
 
 li a.active, li a:hover{
-    background: #000090;
+    background: #e47105;
     transition: .5s;
 }
 
