--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,30 +1,16 @@
-/*Recien agregado*/
-.container-fluid {
-    background: #400000;
-    justify-content: space-between;
-    opacity: 0.95;
+.enviar{
+    width: 30%;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background: rgb(119, 102, 70);
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
 }
-.navbar-toggler-icon{
-    background-color: #ffffff;
-    opacity: 0.95;
-}
-.bg-light, .dropdown-menu{
-    background-color: #400000!important;
-    opacity: 0.95;
-}
-.navbar-nav, .nav-link, .dropdown-item{
-    color: #fff!important;
-    text-align: center;
-}
-#centrar{
-    width: 50%;
-    margin-right: 25%;
-    margin-left: 25%;  
-}
-.card{
-    background-color: #FFB333;
-    opacity: 0.95;
-}
+
 /*Fin Recien Agregado*/
 .logo{
     background: #400000;
@@ -66,11 +52,11 @@ h4, label, p{
 /*Formulario*/
 
 .formulario{
-    padding: auto;
-    margin: 2em;
+    padding: 10px;
+    align-content: center;
+    border-style: groove;
     border-radius: 15px;
     border-color: #000000;
-    border-width: 2em;
     margin: 5px;
     align-content: center;
 }
@@ -91,7 +77,38 @@ h4, label, p{
 /*Division*/
 .division{
     display: flex;
-    margin: 15px;
+    margin: 20px;
+    justify-content: center;
+    
+}
+.division-contenedor{
+    display: flex;
+    padding: 5%;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.div1{
+    background-color: teal;
+    gap: 1em;
+}
+
+.division-frase{
+    text-align: center;
+    font-size: 21px;
+    color: #FFFFFF;
+}
+.division-imagen{
+    height: 120px;
+    width: auto;
+}
+.l-rs{
+    text-decoration: none;
+    align-items: center;
+    color: #FFFFFF;
+}
+.l-rs:hover{
+    color: aqua;
 }
 /* Footer */
 .pie-pagina {
