--- a/css/contacto.css
+++ b/css/contacto.css
@@ -53,12 +53,10 @@ h4, label, p{
 
 .formulario{
     padding: 10px;
-    align-content: center;
     border-style: solid;
     border-radius: 15px;
     border-color: #000000;
     margin: 5px;
-    align-content: center;
 }
 .input-text{
     display: flex;
@@ -67,10 +65,14 @@ h4, label, p{
 .input-text, textarea{
     resize: none;
 }
+form label{
+    display: block;
+}
 .select-input{
     width: 30%;
 }
 .enviar{
+    margin-top: 10px;
     align-self: center;
     display: flex;
 }
@@ -103,15 +105,18 @@ h4, label, p{
 }
 #uno{
     width: 134px;
+    height: 120px;
     border-radius: 35px;
 }
 #dos{
     width: 135px;
+    height: 120px;
     border-radius: 35px;
 }
 #tres{
     background-color: #FFFFFF;
     width: 135px;
+    height: 120px;
     border-radius: 35px;
 }
 .l-rs{
