--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* Estilos en body y para que el pie de pagina se mantenga en la parte inferior */
 body{
     width: 100%;
     letter-spacing: 0.03em;
@@ -15,6 +16,7 @@ body{
     min-height: 100vh;
     background-color: #FFB333;
 }
+/* Tipografia definida */
 h1{
     text-align: center;
 }
@@ -30,7 +32,7 @@ p,a{
     font-size: 1em;
     text-align: justify;
 }
-
+/* Estilos para el banner */
 .cont_banner{
     width: 100%;
     height: 430px;
@@ -40,7 +42,7 @@ p,a{
     width: 100%;
     height: 426px;
 }
-
+/* Contenedor de el bienvenido,mision y vision */
 .intro, .mision_vision{
     width: 500px;
     height: 300px;
@@ -52,6 +54,7 @@ p,a{
 .Caja2{
     width: 100%;
 }
+/* Parte de imagen y texto de taki Kapchiy */
 .articles1 {
     width:58.5%;
     margin-top:70px;
@@ -64,7 +67,7 @@ p,a{
     box-sizing:border-box;
     padding: 20px;
 }
-
+/* Carrusel para que se muestre en el centro */
 .carrusel{
     width: 50%;
     margin: auto;
@@ -88,7 +91,7 @@ a{
     padding:20px;
     box-sizing:border-box;
 }
-
+/* Contenedor de las cards y estilos para que se vean responsive */
 .container{
     width: 100%;
     max-width: 1200px;
@@ -109,7 +112,7 @@ a{
     text-align: center;
     transition: all 0.25s;
 }
-
+/* Efecto cuando ponen el mouse encima del card */
 .container .card:hover{
     transform: translateY(-15px);
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
@@ -129,7 +132,7 @@ a{
     font-size: 16px;
     font-weight: 300;
 }
-
+/* Boton en la card */
 .btn{
     display: inline-block;
     background-color: #e4710575;
@@ -169,7 +172,7 @@ a{
     animation-iteration-count: 3;
     animation-duration: 5s;
 }
-
+/* Enlaces con imagenes */
 .img-enlace{
     height: 307px;
     width: 329px;
@@ -195,7 +198,7 @@ a{
     margin-left: 5px;
     padding: 5px;
 }
-
+/* Estilos del pie de pagina */
 .pie-pagina{
     background-color:#4D0000;
     color:#fff;
@@ -238,7 +241,7 @@ a{
     margin: 0 10px;
     padding: 3px;
 }
-
+/* Prueba de responsive */
 @media (max-width: 3840px) {
     .intro, .mision_vision{
         width: 100%;
