--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,11 @@ a{
         margin: auto;
     }
     .container-card .card{
-        height: 450px;
+        height: 460px;
+    }
+}
+@media (max-width:400px){
+    .container-card .card{
+        height: auto;
     }
 }
