--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ p,a{
     font-family: 'Lato', sans-serif;
     font-size: 1em;
     text-align: justify;
+    font-weight: bold;
 }
 .nr{
     margin-left: 15px;
