--- a/css/Instrumentos.css
+++ b/css/Instrumentos.css
@@ -41,6 +41,10 @@ h3{
 h4{
     font-size: 21px;
 }
+.nr{
+    margin-left: 15px;
+    margin-right:15px ;
+}
 /* Fin de Texto Css*/
 /*Subtitulo*/
 .tipo{
