--- a/css/menu-bar.css
+++ b/css/menu-bar.css
@@ -6,73 +6,14 @@
     box-sizing: border-box;
 }
 
-nav{
+/* nav{
     background: #4D0000;
     opacity: 0.95;
     height: 100px;
     width: 100%;
-}
+} */
 header{
-    height: 100px;
-}
-.enlace{
-    position: absolute;
-    padding: 15px 50px;
-}
-
-.logo{
-    background: #4D0000;
-    height: 100%;
-    width: 70px;
-}
-
-nav ul{
-    float: right;
-    margin-right: 20px;
-    margin-top: 7px;
-}
-
-nav ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-}
-
-nav ul li a{
-    color: #fff;
-    font-size: 18px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
-    text-decoration: none;
-}
-
-nav ul li ol {
-    display: none;
-    height: 100px;
-    list-style: none;
-    position: absolute;
-    background: #4D0000;
-}
-
-nav ul li:hover ol {
-    display: block;
-}
-
-nav ul li ol li {
-    color: #fff;
-    font-size: 18px;
-    padding: 2px;
-    border-radius: 3px;
-    text-transform: uppercase;
-}
-
-nav ul li ol li a {
-    width: 95%;
-    height: 25%;
-    text-transform: uppercase;
-    font-size: 18px;
-    text-decoration: none;
+    background-color: #4D0000;
 }
 
 li a.active, li a:hover{
@@ -80,55 +21,3 @@ li a.active, li a:hover{
     transition: .5s;
 }
 
-.checkbtn{
-    font-size: 30px;
-    color: #fff;
-    float: right;
-    line-height: 80px;
-    margin-right: 30px;
-    cursor: pointer;
-    display: none;
-}
-
-#check{
-    display: none;
-}
-
-@media (max-width: 952px) {
-    .enlace{
-        padding-left: 20px;
-    }
-    nav ul li a{
-        font-size: 16px;
-    }
-}
-
-@media (max-width:858px) {
-    .checkbtn{
-        display: block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
-    nav ul li{
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    li a:hover, li a.active{
-        background: none;
-        color: red;
-    }
-    #check:checked ~ ul {
-        left: 0;
-    }
-}
