--- a/css/historia.css
+++ b/css/historia.css
@@ -117,3 +117,61 @@ p {
     width: 50px;
     height: 50px;
 }
+
+/* Footer */
+.pie-pagina{
+    background-color: #400000;
+    color: #fff;
+    padding: 10px;
+    margin-top: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+}
+
+.pie-pagina .logo-pie{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pie-pagina .logo-pie img{
+    width: 180px;
+}
+
+.txt-footer{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rs{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imgpie {
+    width: 50px;
+    height: 50px;
+}
+
+.ico-rs{
+    width: 50px;
+    height: 50px;
+    margin: 0 10px;
+    padding: 3px;
+}
+
+@media (max-width: 800px) {
+    .pie-pagina{
+        display: block;
+    }
+    .pie-pagina .logo-pie {
+        margin-bottom: 10px;
+    }
+}
